--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+      <div>
+          <h1>Zumba videos</h1>
+      </div>
         
         <script src="" async defer></script>
     </body>
